Fixed overflowing text on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -99,6 +99,10 @@ main {
     }
 }
 
+section {
+    padding: 0 1.5em;
+}
+
 section#header {
     font-weight: bold;
     text-align: center;
